# TGB

./: README.md  pyproject.toml
examples/nodeproppred/tgbn-genre/: persistant_forecast.py  tgn.py
examples/nodeproppred/tgbn-reddit/: moving_average.py
examples/nodeproppred/tgbn-trade/: persistant_forecast.py  tgn.py
tgb/linkproppred/: dataset.py  dataset_pyg.py
tgb/nodeproppred/: dataset.py  dataset_pyg.py  evaluate.py
tgb/utils/: pre_process.py
