[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-tgb"
version = "2.2.0"
description = "Temporal Graph Benchmark project repo"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "shenyang Huang", email = "shenyang.huang@mail.mcgill.ca"},
    {name = "Julia Gastinger"},
    {name = "Farimah Poursafaei"},
    {name = "Emanuele Rossi", email = "emanuele.rossi1909@gmail.com"},
    {name = "Jacob Danovitch", email = "jacob.danovitch@mila.quebec"},
]
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "tqdm>=4.65.0",
    "numpy>=2.0.2",
    "clint>=0.5.1",
    "requests>=2.28.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.15",
    "mkdocstrings-python>=1.1.2",
    "mkdocs-jupyter>=0.24.1",
]

[tool.setuptools.packages.find]
include = ["tgb*"]
